<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="100dp"
        android:layout_height="51dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="289dp"
        android:fontFamily=""
        android:gravity="center|center_vertical"
        android:text="@string/text_login"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:text="@string/login_activity_information"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin" />

    <EditText
        android:id="@+id/loginActivityloginField"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/rounded_edittext_bg"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/login_activity_login_hint_text"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginActivityPasswordField"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/rounded_edittext_bg"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/login_activity_password_hint_text"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityloginField" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="39dp"
        android:theme="@style/loginButton"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/login_activity_login_button"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityPasswordField" />

    <TextView
        android:id="@+id/recoverPasswordLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/login_activity_recover_password_link"
        android:textSize="12sp"
        android:textColor="@color/linkColor"
        android:clickable="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/registrationAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/login_activity_registration_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registrationAccountLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/linkColor"
        android:clickable="true"
        android:onClick="registrationActivityStart"
        android:text="@string/login_activity_registration_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registrationAccountText" />

    <TextView
        android:id="@+id/warning_user_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/warning_user_not_found"
        android:textColor="@color/warningLabel"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityloginField" />

    <TextView
        android:id="@+id/warning_incorrect_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/warning_incorrect_password"
        android:textColor="@color/warningLabel"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginActivityPasswordField" />

</androidx.constraintlayout.widget.ConstraintLayout>