<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/create_account"
        android:layout_width="275dp"
        android:layout_height="47dp"
        android:layout_marginTop="209dp"
        android:layout_marginStart="54dp"
        android:text="@string/registration_activity_create_account"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <TextView
        android:id="@+id/textInformation"
        android:layout_width="163dp"
        android:layout_height="14dp"
        android:layout_marginTop="1dp"
        android:layout_marginStart="57dp"
        android:text="@string/registration_activity_information"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/create_account"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/login_field"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/rounded_edittext_bg"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/registration_activity_login"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/email_field"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/rounded_edittext_bg"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/registration_activity_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/password_field"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/rounded_edittext_bg"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/registration_activity_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="39dp"
        android:theme="@style/loginButton"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/registration_activity_sign_up_button"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field"/>

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/registration_activity_login_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.410"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"
        android:textColor="@color/linkColor"
        android:clickable="true"
        android:text="@string/registration_activity_login_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_text" />


</androidx.constraintlayout.widget.ConstraintLayout>